--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -108,7 +108,7 @@
 
       <ion-row>
         <ion-col>
-          <ion-button fill="clear">Cancel</ion-button>&nbsp;<ion-button (click)="register()">Submit</ion-button>
+          <ion-button fill="clear">Cancel</ion-button>&nbsp;<ion-button type="submit" (click)="register()">Submit</ion-button>
         </ion-col>
       </ion-row>
     </form>
