--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,72 +1,88 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="end">
+      <ion-button (click)="signup()">
+        <p>Sign Up</p>
+      </ion-button>
+      <ion-button (click)="login()">
+        <p>Login</p>
+      </ion-button>
     </ion-buttons>
     <ion-title>
-      Brand
+      Conserv
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-slides>
-    <ion-slide>
-      <img src="https://img.huffingtonpost.com/asset/5cd50c142500005500a10019.jpeg?ops=scalefit_630_noupscale" alt="">
-    </ion-slide>
-  </ion-slides>
 
-  <div class="ion-padding">
-
-    <ion-button mode="ios" color="tertiary" expand="block" (click)="navigateBookAppointment()">
-      Book an appointment
-    </ion-button>
-
-    <ion-grid class="card-grid">
-      <ion-row>
-
-        <ion-col size="6" tappable (click)="redirect('services')">
-          <ion-card mode="ios" class="ion-no-margin">
-            <ion-card-content class="ion-text-center">
-              <img src="https://image.flaticon.com/icons/svg/1773/1773178.svg">
-              <p>Services</p>
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
-
-        <ion-col size="6" tappable (click)="redirect('office-hours')">
-          <ion-card mode="ios" class="ion-no-margin">
-            <ion-card-content class="ion-text-center">
-              <img src="https://image.flaticon.com/icons/svg/1247/1247840.svg">
-              <p>Office hours</p>
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
-
-      </ion-row>
-
-      <ion-row>
-      
-        <ion-col size="6" tappable (click)="redirect('testimonials')">
-          <ion-card mode="ios" class="ion-no-margin">
-            <ion-card-content class="ion-text-center">
-              <img src="https://image.flaticon.com/icons/svg/1443/1443446.svg">
-              <p>Testimonials</p>
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
-      
-        <ion-col size="6" tappable (click)="redirect('contact')">
-          <ion-card mode="ios" class="ion-no-margin">
-            <ion-card-content class="ion-text-center">
-              <img src="https://image.flaticon.com/icons/svg/1976/1976311.svg">
-              <p>Contact us</p>
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
-      
-      </ion-row>
-    </ion-grid>
-
+  <div class="slidesdiv">
+    <ion-slides [options]="slideOptions" pager="true" #slider (ionSlidesDidLoad)="slidesDidLoad(slider)">
+      <ion-slide>
+        <img src="assets/babysit.jpg" />
+      </ion-slide>
+      <ion-slide>
+        <img src="assets/dogwalking.jpg" />
+      </ion-slide>
+      <ion-slide>
+        <img src="assets/elderlycare.jpg" />
+      </ion-slide>
+      <ion-slide>
+        <img src="assets/groceryshopping.jpg" />
+      </ion-slide>
+    </ion-slides>
   </div>
+
+  <ion-grid class="card-grid">
+    <ion-row>
+      <ion-col size="6">
+        <ion-card mode="ios" class="ion-no-margin">
+          <ion-card-content>
+            <span class="text-theme"><strong>Call us</strong></span> <br>
+            521234567890
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col size="6">
+        <ion-card mode="ios" class="ion-no-margin">
+          <ion-card-content>
+            <span class="text-theme"><strong>Mail us</strong></span> <br>
+            contact@email.com
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <ion-card mode="ios">
+    <ion-card-header>
+      <ion-card-title class="text-theme">Send message</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+
+      <ion-list class="line-input">
+        <ion-item>
+          <ion-label>Email</ion-label>
+          <ion-input class="ion-text-right"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label>Name</ion-label>
+          <ion-input class="ion-text-right"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label>Phone</ion-label>
+          <ion-input class="ion-text-right"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label>Message</ion-label>
+          <ion-input class="ion-text-right"></ion-input>
+        </ion-item>
+      </ion-list>
+
+      <ion-button mode="ios" expand="block" color="tertiary">
+        Click me
+      </ion-button>
+
+    </ion-card-content>
+  </ion-card>
 </ion-content>
