--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,4 +1,7 @@
-.welcome-card img {
-  max-height: 35vh;
-  overflow: hidden;
+
+.slidesdiv img{
+  height: 33rem;
+  width: 100%;
+  max-height: 100%;
+  object-fit: cover;
 }
