--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -26,8 +26,8 @@
               <ion-label class="google-label" position="floating">
                 Gender
               </ion-label>
-              <ion-input formControlName="gender" class="google-input" type="text">
-                <ion-select mode="md" style="border: 0in;" class="google-input">
+              <ion-input class="google-input" type="text">
+                <ion-select mode="md" formControlName="gender" style="border: 0in;" class="google-input">
                   <ion-select-option *ngFor="let option of gender"
                   [value]="option">{{option}}</ion-select-option>
                 </ion-select>
