--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -66,7 +66,7 @@
               <ion-label class="google-label" position="floating">
                 Phone Number
               </ion-label>
-              <ion-input formControlName="phoneno" class="google-input" type="tel">
+              <ion-input formControlName="phoneno" class="google-input" type="tel" pattern="tel">
               </ion-input>
           </ion-item>
         </ion-col>
