--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -16,6 +16,14 @@
             </ion-label>
             <ion-input formControlName="name" class="google-input" type="text">
             </ion-input>
+            
+            <div class="validation-errors">
+              <ng-container *ngFor="let validation of validation_messages.name">
+                <div class="error-message" *ngIf="SignupForm.get('name').hasError(validation.type) && (SignupForm.get('name').dirty || SignupForm.get('name').touched)">
+                  <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+                </div>
+              </ng-container>
+            </div>
           </ion-item>
         </ion-col>
       </ion-row>
@@ -27,11 +35,19 @@
                 Gender
               </ion-label>
               <ion-input class="google-input" type="text">
-                <ion-select mode="md" formControlName="gender" style="border: 0in;" class="google-input">
+                <ion-select mode="md" formControlName="gender" style="border: 0in;" class="google-select">
                   <ion-select-option *ngFor="let option of gender"
                   [value]="option">{{option}}</ion-select-option>
                 </ion-select>
               </ion-input>
+
+              <div class="validation-errors">
+                <ng-container *ngFor="let validation of validation_messages.gender">
+                  <div class="error-message" *ngIf="SignupForm.get('gender').hasError(validation.type) && (SignupForm.get('gender').dirty || SignupForm.get('gender').touched)">
+                    <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+                  </div>
+                </ng-container>
+              </div>
           </ion-item>
         </ion-col>
       </ion-row>
@@ -44,6 +60,14 @@
               </ion-label>
               <ion-input mode="md" formControlName="birthday" class="google-input" type="date">
               </ion-input>
+
+              <div class="validation-errors">
+                <ng-container *ngFor="let validation of validation_messages.birthday">
+                  <div class="error-message" *ngIf="SignupForm.get('birthday').hasError(validation.type) && (SignupForm.get('birthday').dirty || SignupForm.get('birthday').touched)">
+                    <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+                  </div>
+                </ng-container>
+              </div>
           </ion-item>
         </ion-col>
       </ion-row>
@@ -56,6 +80,14 @@
               </ion-label>
               <ion-input formControlName="address" class="google-input" type="text">
               </ion-input>
+
+              <div class="validation-errors">
+                <ng-container *ngFor="let validation of validation_messages.address">
+                  <div class="error-message" *ngIf="SignupForm.get('address').hasError(validation.type) && (SignupForm.get('address').dirty || SignupForm.get('address').touched)">
+                    <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+                  </div>
+                </ng-container>
+              </div>
           </ion-item>
         </ion-col>
       </ion-row>
@@ -80,6 +112,14 @@
               </ion-label>
               <ion-input formControlName="email" class="google-input" type="email">
               </ion-input>
+              
+              <div class="validation-errors">
+                <ng-container *ngFor="let validation of validation_messages.email">
+                  <div class="error-message" *ngIf="SignupForm.get('email').hasError(validation.type) && (SignupForm.get('email').dirty || SignupForm.get('email').touched)">
+                    <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+                  </div>
+                </ng-container>
+              </div>
           </ion-item>
         </ion-col>
       </ion-row>
