--- a/src/app/signup/signup.page.scss
+++ b/src/app/signup/signup.page.scss
@@ -46,6 +46,17 @@ ion-label.google-label {
   -webkit-border-radius: 5px;
 }
 
+.google-select {
+  padding-top: 10px !important;
+  color: black;
+  width: 100%;
+  max-width: 100%;
+  padding-left: 10px !important;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+}
+
 .item-label-floating {
   &.ion-invalid.ion-touched {
     .google-label {
@@ -117,5 +128,15 @@ ion-label.google-label {
         color: #062f77 !important;
       }
     }
+  }
+}
+
+ion-content {
+  .error-message
+  {
+    color: red;
+    font-size: 14px;
+    margin-left: 10px;
+    margin-top: 10px;
   }
 }
