--- a/src/app/signup/signup.page.scss
+++ b/src/app/signup/signup.page.scss
@@ -2,7 +2,7 @@
   --background-focused: transparent;
 }
 ion-toolbar {
-  --color: #fff !important;
+  --color: blue !important;
 }
 
 ion-select{
@@ -10,7 +10,7 @@ ion-select{
 }
 
 #menu_header {
-  --color: #fff !important;
+  --color: blue !important;
 }
 #avatar_menu {
   margin-right: 10px !important;
