--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -189,13 +189,13 @@
               </div>
           </ion-item>
         </ion-col>
-      </ion-row><br/>
+      </ion-row>
 
       <ion-row>
         <ion-col>
           <ion-item>
             <ion-checkbox color="primary" formControlName="terms"></ion-checkbox>&nbsp;&nbsp;
-            <ion-label style="font-size: 1pc;" color="primary">I accept terms and conditions</ion-label>
+            <ion-label style="font-size: 0.8pc;" color="primary">I accept terms and conditions</ion-label>
           </ion-item>
           <div class="validation-errors">
             <ng-container *ngFor="let validation of validation_messages.terms">
