--- a/src/app/book-appointment/book-appointment.page.html
+++ b/src/app/book-appointment/book-appointment.page.html
@@ -3,13 +3,13 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Book an appointment</ion-title>
+    <ion-title>Create Job Request</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
-  <ion-row class="appointment-row-dates shadow">
+  <form [formGroup]="makerequestForm" (ngSubmit)="onCreateRequest()">
+    <!-- <ion-row class="appointment-row-dates shadow">
     <ion-col size="2" class="ion-text-center" tappable 
       *ngFor="let day of days"
       (click)="checkDay(day)"
@@ -37,12 +37,69 @@
           </ion-card>
         </ion-col>
       </ion-row>
-    </ion-grid>
-
-    <ion-button mode="ios" expand="block" color="tertiary" (click)="next()">
+    </ion-grid> -->
+    <!-- <ion-button mode="ios" expand="block" color="tertiary" (click)="next()">
       Next
-    </ion-button>
-    
-  </div>
+    </ion-button> -->
+    <ion-item>
+      <ion-label>Errand Name:</ion-label>
+      <ion-input formControlName="errandname"></ion-input>
+    </ion-item>
+    <ion-item *ngIf="makerequestForm.controls.errandname.errors && submitted">
+      <ion-label color="danger">
+        Errand Name is required
+      </ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Errand Category:</ion-label>
+      <ion-select formControlName="category">
+        <ion-select-option *ngFor="let option of categories" [value]="option">
+          {{option}}
+        </ion-select-option>
+      </ion-select>
+    </ion-item>
+    <ion-item *ngIf="makerequestForm.controls.category.errors && submitted">
+      <ion-label color="danger">
+        Errand Category is required
+      </ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Errand Description:</ion-label>
+      <ion-textarea formControlName="description" maxlength="100" rows="2">
+      </ion-textarea>
+      <p>{{100 - makerequestForm.value.description.length}} characters left</p>
+    </ion-item>
+    <ion-item *ngIf="makerequestForm.controls.description.errors && submitted">
+      <ion-label color="danger">
+        Description is required
+      </ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Reporting Date:</ion-label>
+      <ion-button>
+        <ion-icon name="calendar"></ion-icon>
+        <ion-datetime formControlName="date"></ion-datetime>
+      </ion-button>
+    </ion-item>
+    <ion-item *ngIf="makerequestForm.controls.date.errors && submitted">
+      <ion-label color="danger">
+        Date is required
+      </ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Reporting Time:</ion-label>
+      <ion-button>
+        <ion-icon name="time"></ion-icon>
+        <ion-datetime displayFormat="hh-mm-A" formControlName="time" [pickerOptions]="pickerOpt"></ion-datetime>
+      </ion-button>
+    </ion-item>
+    <ion-item *ngIf="makerequestForm.controls.time.errors && submitted">
+      <ion-label color="danger">
+        Time is required
+      </ion-label>
+    </ion-item>
+    <ion-button expand="block" color="tertiary" type="submit">Submit</ion-button>
+  </form>
+
 
 </ion-content>
