Sign Up Validate Existing Email
Password has been updated real time

--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -140,6 +140,14 @@
                   </div>
                 </ng-container>
               </div>
+
+              <div class="validation-errors">
+                <ng-container>
+                  <div class="error-message" *ngIf="!signuperror == ''">
+                    <ion-icon name="information-circle-outline"></ion-icon> {{ signuperror }}
+                  </div>
+                </ng-container>
+              </div>
           </ion-item>
         </ion-col>
       </ion-row>
