--- a/src/app/clientjobs/clientjobs.page.html
+++ b/src/app/clientjobs/clientjobs.page.html
@@ -5,9 +5,37 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-item lines="none" *ngFor="let jobs of job">
 
+  <ion-list>
+    <form [formGroup]="filterform">
+      <ion-label>Filter By:</ion-label>
+      <ion-item>
+        <ion-label>
+          <ion-button #monthbutton (click)="clickmonth()">Months</ion-button>
+          <ion-button #datebutton (click)="clickdate()">Date</ion-button>
+        </ion-label>
+      </ion-item>
+      <ion-item *ngIf="selectByMonth">
+        <ion-label>Months:</ion-label>
+        <ion-select formControlName="month" #Bymonth [(ngModel)]="Bymonth.value"
+          (ngModelChange)="onChangeMonth(Bymonth.value)">
+          <ion-select-option *ngFor="let filter of monthfilter" [value]="filter">
+            {{filter}}
+          </ion-select-option>
+        </ion-select>
+      </ion-item>
+      <ion-item *ngIf="selectByDate">
+        <ion-label>Upcoming Date:</ion-label>
+        <ion-select formControlName="orderbydate" #order [(ngModel)]="order.value"
+          (ngModelChange)="onChangeDate(order.value)">
+          <ion-select-option *ngFor="let filter of orderbyfilter" [value]="filter">
+            {{filter}}
+          </ion-select-option>
+        </ion-select>
+      </ion-item>
+    </form>
+
+    <ion-item lines="none" *ngFor="let jobs of job">
       <ion-card style="background-color: #00F4F4;">
         <ion-card-header>
           <ion-row>
@@ -31,20 +59,20 @@
             <ion-col size="0.5">
             </ion-col>
             <ion-col>
-              <ion-label *ngFor="let jdetails of jobs.details">
+              <ion-label>
                 <div text-wrap>
-                  <p>Job Details: {{jdetails.date | date:'d MMM yyyy'}}</p>
-                  <p>Job Description: {{jdetails.description}}</p>
-                  <p>Job Time: {{jdetails.time}}</p>
+                  <p>Job Date: {{jobs.date | date:'d MMM yyyy'}}</p>
+                  <p>Job Description: {{jobs.description}}</p>
+                  <p>Job Time: {{jobs.time}}</p>
                 </div>
               </ion-label>
             </ion-col>
           </ion-row>
         </ion-card-content>
       </ion-card>
-
     </ion-item>
   </ion-list>
-
-
+  <div *ngIf="nodata" class="center">
+      <h5 class="center-content"> You have no job requests for this month</h5>
+  </div>
 </ion-content>
