--- a/src/app/clientjobs/clientjobs.page.scss
+++ b/src/app/clientjobs/clientjobs.page.scss
@@ -24,3 +24,20 @@ ion-card-header{
 ion-list {
     margin-top: 20px;
 }
+
+.center {
+    height: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+.center-content{
+    color: red;
+}
+  
+
+  
+
+  
+  
