--- a/src/app/all-errand-requests/all-errand-requests.page.html
+++ b/src/app/all-errand-requests/all-errand-requests.page.html
@@ -34,15 +34,40 @@
   </ion-grid>
 
   <ion-grid>
-    <ion-card *ngFor="let item of jobs">
-      <ion-row>
-        <ion-col size="6">
-          <p>{{ item.errandname }}</p>
-          <p>{{ item.category }}</p>
-          <p>{{ item.client }}</p>
-          <p>{{ item.details[0].date | date:'MMM d, y' }}</p>
-        </ion-col>
-      </ion-row>
+    <ion-card *ngFor="let item of jobs" (click)="redirect()">
+      <ion-card-header>
+        <ion-row>
+          <ion-col size="0.5">
+            <ion-thumbnail text-wrap>
+              <ion-icon class="center-right" name="person" color="medium"></ion-icon>
+            </ion-thumbnail>
+          </ion-col>
+          <ion-col>
+            <ion-row>
+              <ion-card-title>{{item.errandname}}</ion-card-title>
+            </ion-row>
+            <ion-row>
+              <ion-card-subtitle>Errand Category: {{item.category}} </ion-card-subtitle>
+            </ion-row>
+          </ion-col>
+        </ion-row>
+      </ion-card-header>
+
+      <ion-card-content>
+        <ion-row>
+          <ion-col size="0.5">
+          </ion-col>
+          <ion-col>
+            <ion-label>
+              <div text-wrap>
+                <p>Job Date: {{item.date | date:'d MMM yyyy'}}</p>
+                <p>Job Description: {{item.description}}</p>
+                <p>Job Time: {{item.time}}</p>
+              </div>
+            </ion-label>
+          </ion-col>
+        </ion-row>
+      </ion-card-content>
     </ion-card>
   </ion-grid>
 </ion-content>
