--- a/src/app/updatephoto/updatephoto.page.html
+++ b/src/app/updatephoto/updatephoto.page.html
@@ -6,12 +6,12 @@
 
 <ion-content>
   <form [formGroup]="addPhotoForm">
-      <ion-item *ngIf="default">
-        <img [src]="user?.image" [hidden]="!user?.image"  class="center">
-      </ion-item>
-      <ion-item *ngIf="!default">
-        <img [src]="photo" [hidden]="!photo"  class="center">
-      </ion-item>
+    <ion-item *ngIf="default">
+      <img [src]="user_with_image?.image" [hidden]="!user_with_image?.image" class="center">
+    </ion-item>
+    <ion-item *ngIf="!default">
+      <img [src]="photo" [hidden]="!photo" class="center">
+    </ion-item>
     <ion-row>
       <ion-col size="6">
         <ion-button expand="block" color="secondary" id="camera-button" (click)="takePhoto()">
@@ -20,7 +20,10 @@
         </ion-button>
       </ion-col>
       <ion-col size="6">
-        <ion-button expand="block" color="success" type="submit" (click)="update()">Upload Photo</ion-button>
+        <ion-button expand="block" color="success" id="update-button" (click)="add()">
+          Upload Photo
+          <ion-icon slot="start" name="cloud-upload"></ion-icon>
+        </ion-button>
       </ion-col>
     </ion-row>
   </form>
