--- a/src/app/updatephoto/updatephoto.page.html
+++ b/src/app/updatephoto/updatephoto.page.html
@@ -1,14 +1,17 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title>Upload Profile Picture</ion-title>
+    <ion-title>Update Profile Picture</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <form [formGroup]="addPhotoForm">
-      <ion-item>
-        <img [src]="photo" [hidden]="!photo" class="center">
-      </ion-item>
+    <ion-item *ngIf="default">
+      <img [src]="user_with_image?.image" [hidden]="!user_with_image?.image" class="center">
+    </ion-item>
+    <ion-item *ngIf="!default">
+      <img [src]="photo" [hidden]="!photo" class="center">
+    </ion-item>
     <ion-row>
       <ion-col size="6">
         <ion-button expand="block" color="secondary" id="camera-button" (click)="takePhoto()">
@@ -20,13 +23,8 @@
         <ion-button expand="block" color="success" id="update-button" (click)="add()">
           Upload Photo
           <ion-icon slot="start" name="cloud-upload"></ion-icon>
-        </ion-button>      
+        </ion-button>
       </ion-col>
     </ion-row>
   </form>
-  <div class="container">
-    <hr class="hr-text" data-content="OR">
-    <ion-button id="logindirect" expand="block" (click)="tologin()">Directly Login</ion-button>
-  </div>
-  
 </ion-content>
