--- a/src/app/updatephoto/updatephoto.page.scss
+++ b/src/app/updatephoto/updatephoto.page.scss
@@ -1,11 +1,13 @@
-.center {
-    display: block;
-    margin-top: 30px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 30px;
-    width: 50%;
-  }
+.image-card {
+  height: 300px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 15px;
+  margin-bottom: 15px;
+ 
+ }
+
 
 .container {
     max-width: 80%;  
