--- a/src/app/upload-photo/upload-photo.page.html
+++ b/src/app/upload-photo/upload-photo.page.html
@@ -7,7 +7,7 @@
 <ion-content>
   <form [formGroup]="addPhotoForm">
       <ion-item>
-        <img [src]="photo" [hidden]="!photo" class="center">
+        <img [src]="photo" [hidden]="!photo" class="image-card">
       </ion-item>
     <ion-row>
       <ion-col size="6">
