Changes to filter to make it more accurate

--- a/src/app/all-errand-requests/all-errand-requests.page.html
+++ b/src/app/all-errand-requests/all-errand-requests.page.html
@@ -23,8 +23,8 @@
           <ion-item style="border: 2px solid black;">
             <ion-label>Months</ion-label>
             <ion-select (ionChange)="filterItems()" formControlName="month">
-              <ion-select-option *ngFor="let mg of months" [value]="mg.value">
-                {{ mg.name }}
+              <ion-select-option *ngFor="let mg of months" [value]="mg">
+                {{ mg }}
               </ion-select-option>
             </ion-select>
           </ion-item>
