--- a/src/app/updateprofile/updateprofile.page.html
+++ b/src/app/updateprofile/updateprofile.page.html
@@ -128,7 +128,7 @@
         <ion-col>
           <ion-button fill="clear" (click)="cancel()">Cancel</ion-button>
           &nbsp;&nbsp;
-          <ion-button type="submit">Submit</ion-button>
+          <ion-button type="submit" (click)="update()">Submit</ion-button>
         </ion-col>
       </ion-row>
     </form>
