Update Profile & All Errands Page (#15)
* hi

* Only UI is done and accidentally deleted the firebase, so put it back in

* Minor

* UI & authentication OK

Left firebaser storing

* All done except Validation

* Done what is neccessary

* Finished

* Update signup.page.ts

* Update signup.page.ts

* Error Messages

Error messages for all but phone and passwords

* Finished PhoneNumber & Confirm Password Validation

* Update signup.page.ts

* Tested & Tried

* Update app.component.ts

* Changes

Made changes by adding a optional image field and when registering the field is empty. Additionally, added 2 methods, one to read the data in firebase and one to update fields for user

* style changes

* Update user.service.ts

* Forms Done

Left [(ngModel)]/default value, which is read from firebase

* Sign Up Validate Existing Email

Password has been updated real time

* Show All Errand Request

* Errand Requests

Show all errand requests that filters by category, month & search. Whenever value of category & month changes, search will become empty. Search can also filter through errands that have been filtered by Categories & Months. No UI

* Update job.service.ts

* UI for Errand Request is done

* Update all-errand-requests.page.ts

* Update user.service.ts

* Update all-errand-requests.page.html

Made some changes to display impt parts of the jobs and the description and client name will be shown only in the details page where they can choose to apply for the errand

* Changes to filter to make it more accurate

--- a/src/app/all-errand-requests/all-errand-requests.page.html
+++ b/src/app/all-errand-requests/all-errand-requests.page.html
@@ -23,8 +23,8 @@
           <ion-item style="border: 2px solid black;">
             <ion-label>Months</ion-label>
             <ion-select (ionChange)="filterItems()" formControlName="month">
-              <ion-select-option *ngFor="let mg of months" [value]="mg.value">
-                {{ mg.name }}
+              <ion-select-option *ngFor="let mg of months" [value]="mg">
+                {{ mg }}
               </ion-select-option>
             </ion-select>
           </ion-item>
@@ -61,7 +61,6 @@
             <ion-label>
               <div text-wrap>
                 <p>Job Date: {{item.date | date:'d MMM yyyy'}}</p>
-                <p>Job Description: {{item.description}}</p>
                 <p>Job Time: {{item.time}}</p>
               </div>
             </ion-label>
