--- a/src/app/upload-photo/upload-photo.page.html
+++ b/src/app/upload-photo/upload-photo.page.html
@@ -7,6 +7,7 @@
 <ion-content>
   <form [formGroup]="addPhotoForm">
       <ion-item>
+        <p class="photopara" [hidden]="photo">Your Uploaded Photo Will Appear Here</p>
         <img [src]="photo" [hidden]="!photo" class="image-card">
       </ion-item>
     <ion-row>
