--- a/src/app/upload-photo/upload-photo.page.scss
+++ b/src/app/upload-photo/upload-photo.page.scss
@@ -7,7 +7,10 @@
   margin-bottom: 15px;
 
  }
-
+.photopara {
+  margin: 0 auto;
+  font-weight: bold;
+}
 .container {
     max-width: 80%;  
     margin: 70px auto;
