--- a/src/app/clientjobs/clientjobs.page.scss
+++ b/src/app/clientjobs/clientjobs.page.scss
@@ -1,7 +1,4 @@
-ion-icon {
-    font-size:30px;
-   
-}
+
 
 ion-card {
     width: 100%;
@@ -19,6 +16,8 @@ ion-card-header{
     top: 50%;
     right: 30%;
     transform: translateY(-50%) translateX(30%);
+    font-size:30px;
+
 }
 
 ion-list {
@@ -34,6 +33,9 @@ ion-list {
 
 .center-content{
     color: red;
+}
+.align-end {
+    text-align: right;
 }
   
 
