Added UI for job applicants + Added some CSS

--- a/src/app/book-appointment/book-appointment.page.scss
+++ b/src/app/book-appointment/book-appointment.page.scss
@@ -1,18 +1,11 @@
-ion-card {
-    border: 1px solid black;
-    margin: 15px;
-}
-
-ion-card-title, ion-datetime{
+ion-datetime{
     font-weight: bold;
     color: blue;
 }
 
-
 ion-item, ion-button {
     margin: 10px;
 }
-
 
 .error-message
 {
