--- a/src/app/book-appointment/book-appointment.page.html
+++ b/src/app/book-appointment/book-appointment.page.html
@@ -10,7 +10,7 @@
 <ion-content>
 
   <form [formGroup]="makerequestForm" (ngSubmit)="onCreateRequest()">
-    <ion-card>
+    <ion-card class="available-job-card">
       <ion-card-header>
         <ion-card-title>Generic</ion-card-title>
       </ion-card-header>
@@ -47,7 +47,7 @@
         </ion-col>
       </ion-row>
     </ion-card>
-    <ion-card>
+    <ion-card class="available-job-card">
       <ion-card-header>
         <ion-card-title>Details</ion-card-title>
       </ion-card-header>
