--- a/src/global.scss
+++ b/src/global.scss
@@ -14,6 +14,32 @@
     background-color: darkgrey;
     outline: 1px solid slategrey;
 }
+//button styling {
+.align-end {
+    text-align: right;
+}
+      
+//card styling
+ion-card-title{
+    font-weight: bold;
+    color: blue;
+}
+
+.available-job-card{
+    border: 2px solid black;
+    margin: 15px;
+    background-color: white;
+}
+
+.applicant-card{
+    background-color:rgb(0, 191, 255) ; 
+    color: black;
+    border-radius: 15px;
+
+}
+.applicant-card ion-card-title {
+    color: black;
+}
 @import "~@ionic/angular/css/core.css";
 
 /* Basic CSS for apps built with Ionic */
