Retrieve by email dynamically

--- a/src/app/clientjobsnotification/clientjobsnotification.page.html
+++ b/src/app/clientjobsnotification/clientjobsnotification.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="emptyx">
   <ion-card class="available-job-card">
     <ion-card-header>
       <ion-card-title>Job Details</ion-card-title>
