Show applicants for job

--- a/src/app/clientjobs/clientjobs.page.html
+++ b/src/app/clientjobs/clientjobs.page.html
@@ -80,6 +80,9 @@
     </ion-item>
   </ion-list>
   <div *ngIf="nodata" class="center">
+    <h5 class="center-content"> You have no job requests currently </h5>
+  </div>
+  <div *ngIf="nodatamonth" class="center">
       <h5 class="center-content"> You have no job requests for this month</h5>
   </div>
 </ion-content>
