--- a/src/app/clientjobsnotification/clientjobsnotification.page.html
+++ b/src/app/clientjobsnotification/clientjobsnotification.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar color="primary">
     <ion-title>Job Applicants</ion-title>
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+      <ion-back-button defaultHref="clientjobs"></ion-back-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -54,17 +54,37 @@
       <ion-card-title>List of Applicants</ion-card-title>
     </ion-card-header>
     <ion-card-content>
+      <div id="container" *ngIf="jobapplicants?.length===0">
+        <p class="center">There are currently no applicants for this job</p>
+        </div>
       <ion-grid>
         <ion-row>
-          <ion-col size="6" *ngFor="let item of alljobs">
+          <ion-col size="6" *ngFor="let applicant of jobapplicants">
             <ion-card class="applicant-card">
               <ion-card-header>
-                <ion-card-title>Applicant: {{item.errandname}}</ion-card-title>
+                  <ion-card-title>Applicant Details:
+                    <p>
+                      <ion-button color="secondary" class="profilebtn">Profile</ion-button>      
+                    </p>
+                  </ion-card-title>
               </ion-card-header>
               <ion-card-content>
-              <div class="ion-text-end">
-                <ion-button>Profile</ion-button>
-              </div>
+                <ion-card class="applicant-child-card">
+                  <ion-row>
+                    <ion-label>
+                      Applicant: {{applicant.id}}
+                    </ion-label>
+                  </ion-row>
+                  <ion-row>
+                    <ion-label>
+                      Date Applied: {{applicant.date | date:'d MMM yyyy'}}
+                    </ion-label>
+                  </ion-row>
+                </ion-card>
+                <div class="ion-text-end">
+                  <ion-button color="success" class="acceptbtn">Accept</ion-button>
+                  <ion-button color="danger" class="rejectbtn">Reject</ion-button>
+                </div>   
               </ion-card-content>
             </ion-card>
           </ion-col>
