--- a/src/app/all-errand-requests/all-errand-requests.page.scss
+++ b/src/app/all-errand-requests/all-errand-requests.page.scss
@@ -7,6 +7,7 @@ ion-card {
     border-radius: 15px;
     border: 1.5px solid black;
     color: black;
+    background-color: white;
 }
 ion-card-header{
     border-bottom: 1px solid black;
@@ -30,3 +31,9 @@ ion-list {
     align-items: center;
     justify-content: center;
   }
+
+.filters{
+    border: 2px solid black; 
+    border-radius: 5px; 
+    --ion-background-color: white;
+}
