Other Profile & CSS
Changed the global scss background colors and added a other profile page, so that when the ER clicks the name, it will redirect to see the client's profile

--- a/src/app/all-errand-requests/all-errand-requests.page.html
+++ b/src/app/all-errand-requests/all-errand-requests.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="emptyx">
+<ion-content class="ER">
   <ion-searchbar class="filters" style="border: 0in;" #searchBar (ionChange)="search($event)"></ion-searchbar>
   <ion-grid>
     <form [formGroup]="FilterForms">
