--- a/src/app/errand-details/errand-details.page.html
+++ b/src/app/errand-details/errand-details.page.html
@@ -29,7 +29,7 @@
       <ion-col class="large" style="margin-left: 1pc;" size="2">
         Client:
       </ion-col>
-      <ion-col class="large">
+      <ion-col class="large" (click)="redirectprofile()">
         {{ user }}
       </ion-col>
 
