--- a/src/app/all-errand-requests/all-errand-requests.page.scss
+++ b/src/app/all-errand-requests/all-errand-requests.page.scss
@@ -8,6 +8,7 @@ ion-card {
     border: 1.5px solid black;
     color: black;
     background-color: white;
+    --background-hover: #d7d8da;
 }
 ion-card-header{
     border-bottom: 1px solid black;
@@ -36,4 +37,5 @@ ion-list {
     border: 2px solid black; 
     border-radius: 5px; 
     --ion-background-color: white;
+    --background-hover: #f4f5f8;
 }
