--- a/src/app/clientjobs/clientjobs.page.html
+++ b/src/app/clientjobs/clientjobs.page.html
@@ -6,9 +6,9 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="C">
 
-  <ion-list>
+  <ion-list style="background-color: transparent; --ion-background-color: transparent">
     <form [formGroup]="filterform">
       <ion-label>Filter By:</ion-label>
       <ion-item>
