--- a/src/global.scss
+++ b/src/global.scss
@@ -52,7 +52,7 @@ ion-card-title{
 }
 //background styling 
 ion-content.homepage{
-    --ion-background-color: linear-gradient(#60b5ff, #ffffff);
+    --ion-background-color: linear-gradient(#ffffff, #60b5ff);
 }
 
 ion-content.ER{
